# WORK_QT

./: README.md
app_wearable/: LauncherPage.qml  NaviButton.qml  SwipeViewPage.qml  app_wearable.pro  connect.cpp  connect.h  main.cpp  main.qml  qml.qrc
app_wearable/GPS/: GPS.qml
app_wearable/IMU/: IMU.qml
app_wearable/SPEED/: SPEED.qml
app_wearable/Style/: Switch.qml  UIStyle.qml
build-demo-Desktop_Qt_5_15_2_GCC_64bit-Debug/: demo
demo01/build-demo01-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CTestConfiguration.ini  build.ninja  cmake_install.cmake
demo01/demo01/: CMakeLists.txt  interaction.h  main.qml  qml.qrc
demo01/demo01/thread/: worker.h  (+1 more)
device_plug/: connect.cpp  connect.h  demo.pro  demo.pro.user.0c243a8  linuxdevicemonitor.cpp  linuxdevicemonitor.h  main.cpp  main.qml
ros-qt-test/build-demo02-Desktop-Debug/: .ninja_log  CTestConfiguration.ini
ros-qt-test/demo02/: CMakeLists.txt  interaction.h  qml.qrc
ros-qt-test/demo02/thread/: CMakeLists.txt
ros-qt/build-demo02-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  CTestConfiguration.ini  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja
ros-qt/demo02/: CMakeLists.txt  interaction.cpp  main.cpp  main.qml
rosqt/build-demo01-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  qtcsettings.cmake
rosqt/demo01/: CMakeLists.txt  main.cpp
rosqt/rosqt/: CMakeLists.txt  interaction.cpp  interaction.h  main.cpp  main.qml  qml.qrc
(+155 files in other folders)
